--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
-    "angularfire2": "^5.4.2",
-    "firebase": "^7.24.0",
+    "cordova-plugin-filechooser": "^1.2.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
