--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
+    "@angular/core": "^15.2.8",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
@@ -26,6 +27,8 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
     "cordova-plugin-filechooser": "^1.2.0",
+    "date-fns": "^2.29.3",
+    "firebase": "^9.21.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
